@@ -1,3 +1,8 @@
+2008-01-22 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Use locale encoding with file names.
+	* Add displayname to description.xml for OOo 2.4.
+
 2008-01-19 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Standalone extension support for OS X 10.5.
